--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">MQTT</string>
+    <string name="settings_name">MQTT settings</string>
+    <string name="server_url">Server URL</string>
+    <string name="server_port">Server port</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="password_not_changed">&lt;Not changed&gt;</string>
+    <string name="encrypted">Encrypted connection</string>
+    <string name="saving">Saving…</string>
 </resources>
